'菜单信息'修改为mp的调用方式